# strawberry-federation-demo

./: .gitignore  Makefile
books/: app.py  pyproject.toml  run.sh  schema.py
gateway/: package-lock.json  package.json  server.js
reviews/: pyproject.toml  run.sh  schema.py
